<resources>
    <string name="app_name">CalculatorWithFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_raven1">Другой фрагмент</string>
    <string name="btn_ac">AC</string>
    <string name="btn_scobaon">(</string>
    <string name="btn_scobaoff">)</string>
    <string name="slash">/</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_zvezda">*</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_plus">+</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_minus">-</string>
    <string name="btn_tchk">.</string>
    <string name="btn_null">0</string>
    <string name="btn_back">Back</string>
    <string name="btn_raven">=</string>
</resources>